objects/LLC_BI__Loan_Collateral2__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Land_Trust_Prior_Lienholders__c</fullName>
        <description>Land trust prior lienholders. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Land trust prior lienholders. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Land Trust Prior Lienholders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Lease_Agreement_Termination_Notice_Days__c</fullName>
        <description>Number of days for Lessor to provide Lender/SBA written notice of intent to terminate the lease for Borrower’s default and an opportunity to cure. Use this field only for Lessees Interest type of liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Number of days for Lessor to provide Lender/SBA written notice of intent to terminate the lease for Borrower’s default and an opportunity to cure. Use this field only for Lessees Interest type of liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lease Agreement Termination Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Leasehold_Term_Of_Loan_Plus_Years__c</fullName>
        <description>Enter number of years if lease needs to be extended above the term of Loan. Use this field only for liens on leaseholds related to building on Leased Land. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Enter number of years if lease needs to be extended above the term of Loan. Use this field only for liens on leaseholds related to building on Leased Land. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Leasehold Term Of Loan Plus Years</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Lender_Must_Cause_Deed_To_Be_In_Escrow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether lender must cause deed to be in escrow. Use this field only for liens on Purchaser Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether lender must cause deed to be in escrow. Use this field only for liens on Purchaser Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lender Must Cause Deed To Be In Escrow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Lessees_Interest_In_The_Lease_Lessee__c</fullName>
        <description>Lessee name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Lessee name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lessees Interest In The Lease Lessee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Lessees_Interest_In_The_Lease_Lessor__c</fullName>
        <description>Lessor name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Lessor name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lessees Interest In The Lease Lessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Line_Of_Credit_Maximum_Amount__c</fullName>
        <description>Line Of Credit Maximum Amount. Use this field only for prior liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Line Of Credit Maximum Amount. Use this field only for prior liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Line Of Credit Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Line_Of_Credit_Present_Amount__c</fullName>
        <description>Line Of Credit Present Amount. Use this field for prior liens only. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Line Of Credit Present Amount. Use this field for prior liens only. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Line Of Credit Present Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Nature_Of_Interests_And_Amounts__c</fullName>
        <description>Describe Nature of interests and amounts. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Describe Nature of interests and amounts. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Nature Of Interests And Amounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__No_Exceptions_For_Parties_In_Possession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Mortgagee Title Policy must contain no exceptions for parties in possession. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Mortgagee Title Policy must contain no exceptions for parties in possession. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>No Exceptions For Parties In Possession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Notice_Before_Foreclosure_Agreement__c</fullName>
        <description>Lender must obtain a written agreement from prior lienholders to provide Lender with this number of days written notice before commencing foreclosure of prior lien. Use this field only for liens on real estate collateral types. Loan Authorization only.</description>
        <inlineHelpText>Lender must obtain a written agreement from prior lienholders to provide Lender with this number of days written notice before commencing foreclosure of prior lien. Use this field only for liens on real estate collateral types. Loan Authorization only.</inlineHelpText>
        <label>Notice Before Foreclosure Agreement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Prior_Lienholders_Written_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether prior lienholders written verification is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether lienholders written verification is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Prior Lienholders Written Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Puerto_Rico_Chattel_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true only if security interest in personal property is Puerto Rico Chattel Mortgage. This field is used in SBA Loan Authorization and E-Tran submissions starting with version 5.</description>
        <inlineHelpText>This field is set to true only if security interest in personal property is Puerto Rico Chattel Mortgage. This field is used in SBA Loan Authorization and E-Tran submissions starting with version 5.</inlineHelpText>
        <label>Puerto Rico Chattel Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Purchasers_Interest_Contract_Purchaser__c</fullName>
        <description>Purchaser name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Purchaser name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Purchasers Interest Contract Purchaser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Purchasers_Interest_Contract_Seller__c</fullName>
        <description>Seller name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Seller name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Purchasers Interest Contract Seller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Realty_And_Leaseholds_Option__c</fullName>
        <description>Realty And Leaseholds Options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Realty And Leaseholds Options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Realty And Leaseholds Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lien On Land And Improvements</fullName>
                </value>
                <value>
                    <fullName>Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale</fullName>
                </value>
                <value>
                    <fullName>Collateral Assignment of (or lien on) Seller’s Interest in Land Contract of Sale</fullName>
                </value>
                <value>
                    <fullName>Assignment of Beneficial Interest and Power of Direction in Land Trust</fullName>
                </value>
                <value>
                    <fullName>Leasehold Instrument on Building Constructed on Leased Land</fullName>
                </value>
                <value>
                    <fullName>Leasehold Security Interest in building on leased land</fullName>
                </value>
                <value>
                    <fullName>Lessee’s Interest in a Lease by Assignment</fullName>
                </value>
                <value>
                    <fullName>Lessee’s Interest in a Lease by Lien, Mortgage or Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>Leasehold on Tribal Land</fullName>
                </value>
                <value>
                    <fullName>Cooperative Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Required_Endorsements__c</fullName>
        <description>Required Endorsements is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Required Endorsements is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Required Endorsements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Shared_Lien_With_Lenders_Non_SBA_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the lien is shared with Lenders non-SBA Loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates if the lien is shared with Lenders non-SBA Loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Shared Lien With Lenders non-SBA Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Shared_Lien_With_Other_Lender_Amount__c</fullName>
        <description>If the lien is shared with other lender, this field holds the shared lien Amount. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>If the lien is shared with other lender, this field holds the shared lien Amount. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Shared Lien With Other Lender Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Shared_Lien_With_Other_Lender_Name__c</fullName>
        <description>If the lien is shared with other lender, this field holds the Name of Lender that the lien is shared with. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>If the lien is shared with other lender, this field holds the Name of Lender that the lien is shared with. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Shared Lien With Other Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Statement_Of_Non_Homestead_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether statement of non-homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether statement of non-homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Statement Of Non Homestead Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Status__c</fullName>
        <description>Select collateral status from the list.</description>
        <inlineHelpText>Select collateral status from the list.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Value</fullName>
                </value>
                <value>
                    <fullName>Overvalued</fullName>
                </value>
                <value>
                    <fullName>Sale Pending</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>In Possession</fullName>
                </value>
                <value>
                    <fullName>Dissipated</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Insurance Claim</fullName>
                </value>
                <value>
                    <fullName>Local Unknown</fullName>
                </value>
                <value>
                    <fullName>Inventoried</fullName>
                </value>
                <value>
                    <fullName>Appraised</fullName>
                </value>
                <value>
                    <fullName>Collateral of Record</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Statutory_Power_Of_Sale_Language_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Statutory Power Of Sale Language is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether Statutory Power Of Sale Language is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Statutory Power Of Sale Language Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Survey_Certified_To_Lender_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Survey Certified To Lender is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether Survey Certified To Lender is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Survey Certified To Lender Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Taxes_And_Municipal_Liens_Curr_Or_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Mortgagee Title Policy must reflect that all taxes and municipal liens have been brought current or paid. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Mortgagee Title Policy must reflect that all taxes and municipal liens have been brought current or paid. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Taxes And Municipal Liens Curr Or Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__WO_Exception_To_Homestead_Survey_Taxes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Mortgagee Title Policy is without exception to Homestead, Survey or Taxes. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Mortgagee Title Policy is without exception to Homestead, Survey or Taxes. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>WO Exception To Homestead Survey Taxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Waiver_Of_Business_Homestead_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether waiver of business homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether waiver of business homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Waiver Of Business Homestead Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Waiver_Of_Redemption_Rights_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether waiver of redemption rights is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether waiver of redemption rights is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Waiver Of Redemption Rights Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Written_Waiver_Of_Homestead_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether written waiver of homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether written waiver of homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Written Waiver Of Homestead Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Collateral Pledged</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Loan Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Pledged</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Account_Must_Have_Authority</fullName>
        <active>false</active>
        <description>There must be at least one relationship who has pledging authority to pledge against the loan</description>
        <errorConditionFormula>NOT(LLC_BI__Collateral__r.LLC_BI__Has_Authority__c)</errorConditionFormula>
        <errorMessage>There are no relationships related to the collateral who have pledging authority.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Advance_Rate_Override</fullName>
        <active>true</active>
        <description>This validates that if the Advance Rate has been overridden, a comment has been provided.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(LLC_BI__Advance_Rate_Override__c))||(LLC_BI__Advance_Rate_Override__c==0), ISBLANK(LLC_BI__Override_Reason__c))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Override_Reason__c</errorDisplayField>
        <errorMessage>You must specify a reason for overriding the Advance Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Pledge_More_Than_Lendable_Value</fullName>
        <active>true</active>
        <description>If the user attempts to pledge an amount greater than the current lendable value, they must check the authorize checkbox.</description>
        <errorConditionFormula>AND(LLC_BI__Amount_Pledged__c &gt; LLC_BI__Current_Lendable_Value__c,  LLC_BI__Authorize__c == false)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Authorize__c</errorDisplayField>
        <errorMessage>You are trying to pledge more than the current lendable value of this collateral. You must check the Authorize Pledge Amount checkbox to continue.</errorMessage>
    </validationRules>
</CustomObject>